lib/libremidi/tests/corpus/Invalid/No Header Chunk/ridelike1.mid
vti_encoding:SR|utf8-nl
vti_timelastmodified:TR|03 Feb 2000 02:09:08 -0000
vti_author:SR|madeitaly.geo
vti_syncwith_www.animazione.net\:80:TR|03 Feb 2000 02:09:08 -0000
vti_syncwith_localhost\\c\:\\documenti\\madeitaly2/c\:/documenti/madeitaly2:TR|03 Feb 2000 02:09:08 -0000
vti_syncwith_www.geocities.com\:80/madeitaly:TR|03 Feb 2000 02:09:08 -0000
vti_modifiedby:SR|madeitaly.geo
vti_timecreated:TR|18 Apr 2000 10:39:43 -0000
vti_backlinkinfo:VX|Internet/Audio_Video2.htm
vti_extenderversion:SR|4.0.2.3712
vti_syncwith_localhost\\c\:\\webshare\\wwwroot\\madeitaly/c\:/webshare/wwwroot/madeitaly:TR|03 Feb 2000 02:09:08 -0000
